hard-gists/998722/run.log
=== Docker Run Log for 998722 ===
Started at: Mi 29. Okt 18:37:56 CET 2025

[2025-10-29 18:37:57] START: Running container for 998722
[2025-10-29 18:37:57] SUCCESS: Container 02a7a3f81075de46a4981d5656c7f766e04e84dc784c4295b83c1f5045633947 started for 998722
=== Container logs for 998722 ===
  File "/snippet.py", line 40
    except ValidationError, e:
           ^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 998722 ===
[2025-10-29 18:37:59] INFO: Container 02a7a3f81075de46a4981d5656c7f766e04e84dc784c4295b83c1f5045633947 has stopped
